--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-sdk tools:overrideLibrary="android.core.splashscreen"/>
 
     <application
         android:name=".GithubApplication"
@@ -14,13 +15,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/github_logo_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GithubUserCompose.Splash"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.GithubUserCompose">
+            android:theme="@style/Theme.GithubUserCompose.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
